--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brain Hop</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Brain Hop — Intelligent Chat Platform" />
+    <meta name="author" content="Brain Hop" />
 
+    <!-- Favicon (browser tab icon) -->
+    <link rel="icon" type="image/png" href="\brain_hop.png" />
+
+    <!-- Open Graph (link previews) -->
     <meta property="og:title" content="Brain Hop" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta
+      property="og:description"
+      content="An intelligent chat platform powered by multiple models."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/brain_hop.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@brainhop_ai" />
+    <meta name="twitter:image" content="/brain_hop.png" />
   </head>
 
   <body>
